style.css
body {
    margin: 0;
    height: 100vh;
    width: 100vw;
    font-family: monospace;
    font-weight: 100;
    background: black;
    text-shadow: 0 0 3px black;
    color: white;

    overflow-x: hidden;
    /* overflow: hidden; */
    overscroll-behavior: none;
}

#gs-canvas {
    display: block;
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    /*touch-action: none;*/
}

#three-js-canvas {
    position: fixed;
    z-index: 2;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
}

#css-3d-canvas {
    position: fixed;
    z-index: 3;
    top: 0;
    left: 0;

    pointer-events: none;
    touch-action: none;
}

#video-background {
    position: absolute;
    top: 0;
    left: 0;
    /*width: 100%;*/
    height: 100%;
    z-index: -1;

    visibility: hidden;
}

#page-overview-container {
    position: absolute;
    top: 5%;
    left: 5%;
    padding: 1%;
    font-size: 2vh;
    z-index: 10;

    display: flex;
    flex-direction: column;
}

#page-overview-title {
    font-size: 3vh;
}

#page-overview-description {
    font-size: 2vh;
}

#temp-container {
    position: absolute;
    padding: min(10%, 50px);
    width: calc(101vw - 2 * min(10%, 50px));
    /* height: calc(100vh - 2 * min(10%, 50px)); */

    display: flex;
    flex-direction: column;
    gap: 30px;

    z-index: 10;
    backdrop-filter: blur(64px);
}

.temp-container-popup {
    position: fixed;
    display: flex;
    gap: 3%;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: min(5%, 5px);
    width: calc(100vw - 2 * min(5%, 5px));
    height: calc(100vh - 2 * min(5%, 5px));
    z-index: 11;
    backdrop-filter: blur(64px);
}

.temp-back-button {
    position: relative;
    top: 0;
    left: 0;
    padding: 2%;
    border: 2px solid white;
    width: max(5%, 30px);
    /* height: max(5%, 30px); */
    cursor: pointer;

    color: white;
    background-color: transparent;
    transition: all 0.2s ease-out;
}

.temp-back-button:hover {
    color: #333333;
    background-color: white;
}

.temp-title {
    font-size: 40px;
}

.temp-abstract {
    font-size: 15px;
    font-weight: 100;
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    gap: 3%;
    justify-content: space-between;
}

.temp-quote {
    font-size: 30px;
    font-weight: 100;
    width: max(50%, 300px);
    font-style: italic;
}

.temp-img {
    object-fit: contain;
    width: max(min(100%, 50vw), 100px);
    max-height: max(min(100%, 50vh), 100px);

    cursor: pointer;
}

.temp-img-popup {
    object-fit: contain;
    width: max(100vw, 100px);
    max-height: max(80vh, 100px);
}

.temp-video {
    object-fit: contain;
    width: max(min(100%, 50vw), 100px);
    max-height: max(min(100%, 50vh), 100px);
}

.temp-video-full {
    width: max(min(100%, 100vw), 100px);
    max-height: max(min(100%, 50vh), 100px);
}

.temp-section-title {
    font-size: 30px;
}

.temp-text {
    font-size: 15px;
}

.temp-grid-gallery-old {
    display: grid;
    grid-template-columns: repeat(2, minmax(0, 1fr));
    gap: 3%;
    place-items: center;
    padding: 2%;
}

.temp-grid-gallery {
    display: inline-grid;
    grid-template-columns: auto auto; /* Adjust as needed */
    grid-auto-rows: auto;             /* Adjust as needed */
    gap: 3%;
    place-items: center;
    padding: 0 2% 2% 2%;
}

